# wagtail-fastapi-blog

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  LICENSE_VERIFICATION.md  Makefile  QUALITY_GUIDE.md  README.md  ROADMAP.md  main_asgi.py  manage.py  pyproject.toml  run_tests.py  working_tests_demo.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md  security_vulnerability.md
blog/: models.py
blog/migrations/: 0001_initial.py  0002_alter_blogpage_date_alter_blogpage_intro_and_more.py
blog/templates/blog/: blog_index_page.html  blog_page.html
django_project/static/css/: performance.css
django_project/templates/: base.html
django_project/templates/payments/: cancel.html  success.html
django_project/totonoe_template/: urls.py
django_project/totonoe_template/settings/: base.py  dev.py  e2e.py  prod.py
docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml
fastapi_app/app/: __init__.py  main.py
fastapi_app/app/routers/: payments.py  posts.py  posts_fixed.py
fastapi_app/app/schemas/: payment.py  post.py
fastapi_app/app/utils/: performance.py
scripts/: setup_e2e_db.py
tests/: conftest.py
tests/e2e/: conftest.py  test_basic_e2e.py  test_blog_e2e.py
tests/integration/: test_full_integration.py
tests/unit/: test_blog_models.py  test_payments_api.py  test_posts_api.py
