[project]
name = "my-wagtail-fastapi-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.3",
    "fastapi>=0.115.12",
    "python-dotenv>=1.1.0",
    "stripe>=12.2.0",
    "uvicorn>=0.34.3",
    "wagtail>=7.0.1",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
